oss-nginx-migration/k8s/test-app-canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-canary
  namespace: test-app-nginx
spec:
  selector:
    app: echo-canary
  ports:
    - port: 80
      targetPort: 5678
