oss-nginx-migration/k8s/test-app-ingress-app-root.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress-app-root
  namespace: test-app-nginx
  annotations:
    nginx.ingress.kubernetes.io/app-root: /api
spec:
  ingressClassName: nginx
  rules:
    - host: app-root.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo-web
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: echo-api
                port:
                  number: 80
