oss-nginx-migration/k8s/test-app-ingress-permanent-redirect.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress-permanent-redirect
  namespace: test-app-nginx
  annotations:
    nginx.ingress.kubernetes.io/permanent-redirect: https://example.com
    nginx.ingress.kubernetes.io/permanent-redirect-code: "301"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /go
            pathType: Prefix
            backend:
              service:
                name: echo-web
                port:
                  number: 80
