oss-nginx-migration/k8s/test-app-ingress-rewrite.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress-rewrite
  namespace: test-app-nginx
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /rewrite(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-web
                port:
                  number: 80
