oss-nginx-migration/k8s/test-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
  namespace: test-app-nginx
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo-web
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: echo-api
                port:
                  number: 80
